testsuite/tests/typecheck/should_fail/T15361.stderr

T15361.hs:13:13: error:
    • Could not deduce: a ~ c
      from the context: b ~ a
        bound by a pattern with constructor:
                   HRefl :: forall {k1} (a :: k1). a :~~: a,
                 in an equation for ‘foo’
        at T15361.hs:13:5-9
      ‘a’ is a rigid type variable bound by
        the type signature for:
          foo :: forall a b c. (a :~~: b) -> a :~~: c
        at T15361.hs:(11,1)-(12,27)
      ‘c’ is a rigid type variable bound by
        the type signature for:
          foo :: forall a b c. (a :~~: b) -> a :~~: c
        at T15361.hs:(11,1)-(12,27)
      Expected type: a :~~: c
        Actual type: a :~~: a
    • In the expression: HRefl
      In an equation for ‘foo’: foo HRefl = HRefl
    • Relevant bindings include
        foo :: (a :~~: b) -> a :~~: c (bound at T15361.hs:13:1)

T15361.hs:20:27: error:
    • Could not deduce (Show a) arising from a use of ‘show’
      from the context: Ord a
        bound by a pattern with constructor:
                   IGetKnockedDown :: forall a. (Eq a, Ord a) => a -> Chumbawamba a,
                 in an equation for ‘goo’
        at T15361.hs:20:6-22
      Possible fix:
        add (Show a) to the context of
          the type signature for:
            goo :: forall a. Chumbawamba a -> String
    • In the expression: show x
      In an equation for ‘goo’: goo (IGetKnockedDown x) = show x
